# rusty-archive

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  deps.yml  release.yml
src/: cli.rs  file_check.rs  file_info.rs  main.rs  state.rs  stats.rs
