[package]
name = "rusty-archive"
version = "0.2.1"
authors = ["Jens Gutermuth"]
edition = "2021"
description = "Don't let your digital archive rust away! Check for modifications (intentional or not), missing files and track new additions."
repository = "https://github.com/JensGutermuth/rusty-archive.git"
readme = "README.md"
keywords = ["digital archive", "checksums", "bitrot"]
categories = ["command-line-utilities", "filesystem"]

license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bpaf = { version = "0.9", features = ["derive"] }
hex = "0.4.3"
lazy_static = "1.4.0"
rayon = "1.7"
regex = "1.8.4"
sha2 = "0.10"
time = { version = "0.3.23", features = ["local-offset", "formatting"] }
time-tz = { version = "1.0.3", features = ["system"] }
walkdir = "2.3"

[profile.release]
lto = true
